Finish responsive layout

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-.main-container {
+/* .main-container {
     background-color: var(--primary);
     margin-top: 44px;
     margin-bottom: 44px;
@@ -308,4 +308,4 @@
     .content {
         margin: unset;
     }
-}
+} */
