--- a/styles/side.css
+++ b/styles/side.css
@@ -1,4 +1,4 @@
-.side-menu {
+/* .side-menu {
     max-width: 290px;
     position: fixed;
     left: 50%;
@@ -186,4 +186,4 @@
     .side-menu {
         display: flex;
     }
-}
+} */
