--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     width: 100%;
     height: 44px;
     background-color: var(--primary);
@@ -100,4 +100,4 @@
 
 :root.darkTheme .header__theme-button-moon {
     display: none;
-}
+} */
