--- a/styles/feed.css
+++ b/styles/feed.css
@@ -269,7 +269,7 @@ body{
 }
 
 /* left sidebar */
-.sidebar{
+/* .sidebar{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -301,10 +301,10 @@ body{
   width: 24px;
   height: 24px;
   padding: 0 16px;
-}
+} */
 
 /* menu */
-.menu{
+/* .menu{
   list-style: none;
   padding: 0;
   margin: 0;
@@ -347,7 +347,7 @@ body{
 
 .sidebar:hover span{
   display: inline;
-}
+} */
 
 /* suggestions */
 .suggestions{
@@ -570,6 +570,7 @@ body{
 
   .main-container {
     gap: 16px;
+    padding-left: 244px; /* 사이드바 너비만큼 딱 고정 */
   }
 }
 
@@ -579,7 +580,7 @@ body{
   .suggestions { display: none; }
 
   .mobile-topbar { display: flex; }
-  .mobile-bottombar { display: flex; }
+  /* .mobile-bottombar { display: flex; } */
 
   .main-container { gap: 0; }
 
