--- a/styles/feed.css
+++ b/styles/feed.css
@@ -5,27 +5,21 @@ body{
 
 /* layout*/
 .main-container{
-  box-sizing: border-box;
   display: flex;
   align-items: flex-start;
-  gap: 40px;
+  gap: 24px;
   background-color: #ffffff;
   width: 100%;
-  justify-content: center;
 }
 
 /* content */
 .content{
-  /* flex: 1;
+  flex: 1;
   max-width: 560px;
   min-width: 0;
   margin: 0 auto;
   margin-top: 24px;
-  width: 100%; */
-  flex: 0 0 auto; /* flex: 1에서 변경 */
-  max-width: 630px;
-  width: 100%; /* 고정 너비 */
-  margin-top: 24px;
+  width: 100%;
 }
 
 /* story */
@@ -66,7 +60,6 @@ body{
   margin-bottom: 8px;
 }
 
-/* reset의 border-box 대비: 64px - 2px*2 = 60px 보이는 영역으로 맞춤 */
 .story-item img {
   width: 64px;
   height: 64px;
@@ -274,100 +267,16 @@ body{
   white-space: nowrap;
 }
 
-/* left sidebar */
-/* .sidebar{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  height: 100vh;
-  padding: 20px 0;
-  width: 64px;
-  flex: 0 0 auto;
-  transition: width 0.2s ease;
-  background-color: #ffffff;
-  position: sticky;
-  top: 0;
-}
-
-.sidebar:hover{
-  width: 244px;
-}
-
-.sidebar nav{
-  flex: 1;
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.logo{ cursor: pointer; }
-
-.logo svg{
-  width: 24px;
-  height: 24px;
-  padding: 0 16px;
-} */
-
-/* menu */
-/* .menu{
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-
-.menu-avatar{
-  border-radius: 50%;
-}
-
-.menu-item a{
-  display: flex;
-  align-items: center;
-  height: 48px;
-  width: 100%;
-  padding: 0 16px;
-  gap: 12px;
-  text-decoration: none;
-  color: #262626;
-  border-radius: 12px;
-}
-
-.menu-item a svg{
-  width: 24px;
-  height: 24px;
-}
-
-.menu-item img{
-  width: 24px;
-  height: 24px;
-}
-
-.menu-item a:hover{
-  background-color: #d7d7d7;
-}
-
-.sidebar span{
-  display: none;
-}
-
-.sidebar:hover span{
-  display: inline;
-} */
 
 /* suggestions */
 .suggestions{
-  /* margin-right: 2px;
-  flex: 1 1 320px;
-  max-width: 320px;
-  min-width: 260px;
-  margin-top: 24px; */
-  flex: 0 0 auto; /* flex: 1 1 320px에서 변경 */
+  margin-right: 40px;
+  flex: 0 0 320px;
   width: 320px;
   margin-top: 24px;
-  font-size: 14px;  
-  line-height: 1.2;
 }
+
+.suggestions button { font-size: 12px; }
 
 /* 내 프로필 */
 .my-profile{
