--- a/styles/feed.css
+++ b/styles/feed.css
@@ -15,7 +15,7 @@ body{
 /* content */
 .content{
   flex: 1;
-  max-width: 560px;
+  max-width: 630px;
   min-width: 0;
   margin: 0 auto;
   margin-top: 24px;
@@ -182,7 +182,7 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px;
+  padding: 16px 8px 8px 8px;
   height: 30px;
   margin-bottom: 4px;
 }
