--- a/styles/explore.css
+++ b/styles/explore.css
@@ -142,6 +142,14 @@
     border-radius: var(--explore-radius);
 }
 
+.explore__item--reel {
+    aspect-ratio: 4 / 5;
+}
+
+.explore__item--photo {
+    aspect-ratio: 1 / 1;
+}
+
 .explore__item img {
     width: 100%;
     height: 100%;
